--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <header class="text-center py-3">
         <h1>Corrida Contra o Tempo</h1>
         <p>Clique nos círculos antes que desapareçam! Você tem 30 segundos.</p>
+        <form id="formulario" class="mb-4">
+      <div>
+
+        <input type="text" id="name" placeholder="Nome" required class="form-control mb-2" style="width: 200px; margin: 0 auto;">
+
+        <input type="email" id="email" placeholder="E-mail" required class="form-control mb-2" style="width: 200px; margin: 0 auto;">
+
+      </div>
+
+      <button type="submit" class="btn btn-primary">Começar</button>
+
+    </form>
     </header>
 
     <main class="container game-container">
