--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             </div>
         </section>
     </main>
+    <table id="resultadotabela" class="table mt-4">
+
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>E-mail</th>
+          <th>Pontuação</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+    
     <script src="script.js"></script>
 </body>
 </html>
